--- a/app/src/main/res/menu/gallery.xml
+++ b/app/src/main/res/menu/gallery.xml
@@ -5,7 +5,7 @@
 
 
     <item
-        android:id="@+id/AddFromGallery"
+        android:id="@+id/addFromGallery"
         android:icon="@drawable/ic_add_gallery"
         android:title="Add Image"
         app:showAsAction="always"
