--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -37,7 +37,21 @@
                 android:textStyle="bold"
                 android:padding="8dp"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/shareCardButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#2196F3"
+                style="@style/ShareButton"
+                android:drawablePadding="5dp"
+                android:text="Share"
+                android:textStyle="bold"
+                app:icon="@drawable/ic_share_option"
+                app:iconGravity="textStart"
+                app:iconSize="20dp"
+                android:layout_marginTop="3dp"/>
+
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-</FrameLayout>
+</RelativeLayout>
