--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,7 +35,9 @@
         <item name="android:itemTextAppearance">@color/design_default_color_primary</item>
     </style>
 
-    <style name="TextAppearance">
-        <item name="android:textColor">@android:color/black</item>
+    <style name="ShareButton" parent="TextAppearance.AppCompat.Widget.Button">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="backgroundTint">#2196F3</item>
+        <item name="backgroundColor">#2196F3</item>
     </style>
 </resources>
