--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     tools:context=".GalleryActivity">
     <!--style="@style/your_theme"-->
     <!--    For Smooth animations-->
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
         android:orientation="vertical"
         android:padding="8dp"
-        tools:context=".GalleryActivity"> <!--    For Smooth animations-->
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" /> <!--    For Smooth animations-->
 
-        <TextView
-            android:id="@+id/homeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="No items. Try adding from the action above"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:layout_marginTop="330dp"/>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/homeTextView"
+        style="@style/TextAppearance.MaterialComponents.Subtitle2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="330dp"
+        android:text="@string/no_items_try_adding_from_the_action_above"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.068" />
 
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
